<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_ab_settings"
        android:icon="@drawable/ic_menu_settings_white_30dp"
        android:title="@string/menu_main_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_ab_main"
        android:icon="@drawable/ic_more_vert_white_30dp"
        android:orderInCategory="101"
        android:title=""
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/menu_item_dpad"
                android:icon="@drawable/ic_menu_dpad_white_30dp"
                android:title="@string/menu_main_dpad"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_item_dpad_racecar"
                android:icon="@drawable/ic_menu_racecar_white_30dp"
                android:title="@string/menu_main_dpad_racecar"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_item_dpad_6button"
                android:icon="@drawable/ic_menu_dpad_6buttons_white_30dp"
                android:title="@string/menu_main_dpad_6button"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_item_touchpad"
                android:icon="@drawable/ic_menu_touchpad_white_30dp"
                android:title="@string/menu_main_touchpad"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_item_tank"
                android:icon="@drawable/ic_menu_tank_white_30dp"
                android:title="@string/menu_main_tank"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_item_tank_3motor"
                android:icon="@drawable/ic_menu_tank_3motor_white_30dp"
                android:title="@string/menu_main_tank_3motor"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_item_settings"
                android:icon="@drawable/ic_menu_settings_white_30dp"
                android:title="@string/menu_main_settings"
                app:showAsAction="never" />

        </menu>
    </item>

</menu>