<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded,RtlSymmetry">

    <TextView
        android:id="@+id/title_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#666"
        android:paddingLeft="10dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/devices_paired"
        android:textColor="#FFF"
        android:textSize="17sp"
        android:visibility="gone" />

    <ListView
        android:id="@+id/paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/title_new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#666"
        android:paddingLeft="10dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/devices_new"
        android:textColor="#FFF"
        android:textSize="17sp"
        android:visibility="gone" />

    <ListView
        android:id="@+id/new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/no_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/devices_no_devices"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_scan"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/scan_idle"
        android:textColor="#000"
        android:textSize="17sp" />

</LinearLayout>
