<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded,RtlSymmetry,RelativeOverlap">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="12dp"
                android:paddingRight="20dp"
                android:paddingBottom="12dp"
                android:text="@string/settings_header_basic"
                android:textColor="@color/colorAccent"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="#3F3F3F"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="setFWDREV"
                    android:paddingLeft="20dp"
                    android:paddingTop="6dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="6dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:paddingBottom="2dp"
                        android:text="@string/settings_opt_swap_fr"
                        android:textColor="#FFF"
                        android:textSize="17sp" />

                    <CheckBox
                        android:id="@+id/cbFWDREV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:clickable="false" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="setLeftRight"
                    android:paddingLeft="20dp"
                    android:paddingTop="6dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="6dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:paddingBottom="2dp"
                        android:text="@string/settings_opt_swap_lr"
                        android:textColor="#FFF"
                        android:textSize="17sp" />

                    <CheckBox
                        android:id="@+id/cbLeftRight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:clickable="false" />

                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="48dp"
                android:paddingRight="20dp"
                android:paddingBottom="12dp"
                android:text="@string/settings_header_advanced"
                android:textColor="@color/colorAccent"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="#3F3F3F"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="setRegSpeed"
                    android:paddingLeft="20dp"
                    android:paddingTop="6dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="6dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:paddingBottom="2dp"
                        android:text="@string/settings_opt_regspeed"
                        android:textColor="#FFF"
                        android:textSize="17sp" />

                    <CheckBox
                        android:id="@+id/cbRegSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:clickable="false" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="setSyncMotors"
                    android:paddingLeft="20dp"
                    android:paddingTop="6dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="6dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:paddingBottom="2dp"
                        android:text="@string/settings_opt_syncmotors"
                        android:textColor="#FFF"
                        android:textSize="17sp" />

                    <CheckBox
                        android:id="@+id/cbSyncMotors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:clickable="false" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="setGamepad"
                    android:paddingLeft="20dp"
                    android:paddingTop="6dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="6dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:paddingBottom="2dp"
                        android:text="@string/settings_opt_gamepad"
                        android:textColor="#FFF"
                        android:textSize="17sp" />

                    <CheckBox
                        android:id="@+id/cbGamepad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:clickable="false" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:textSize="15sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="end|bottom"
        android:layout_margin="24dp"
        android:onClick="goBack"
        android:scaleType="center"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@drawable/ic_arrow_back_white_24dp"
        app:fabCustomSize="36dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>