<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded,RtlSymmetry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <eparon.nxtremotecontroller.View.SquareImageButton
                android:id="@+id/button_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/dpad_button_background_idle"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/d_arrow_left_48dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <eparon.nxtremotecontroller.View.SquareImageButton
                    android:id="@+id/button_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:background="@drawable/rounded_corners"
                    android:backgroundTint="@color/dpad_button_background_idle"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/d_arrow_up_48dp" />

                <eparon.nxtremotecontroller.View.SquareImageButton
                    android:id="@+id/button_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:background="@drawable/rounded_corners"
                    android:backgroundTint="@color/dpad_button_background_idle"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/d_arrow_down_48dp" />

            </LinearLayout>

            <eparon.nxtremotecontroller.View.SquareImageButton
                android:id="@+id/button_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/dpad_button_background_idle"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/d_arrow_right_48dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/power_power"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/power_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:max="100"
                android:paddingTop="4dp"
                android:paddingBottom="4dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/power_4wheel_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/power_4wheel"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/power_4wheel_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:max="100"
                android:paddingTop="4dp"
                android:paddingBottom="4dp" />

        </LinearLayout>

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/state_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:text="@string/conn_state_not_connected"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/connection_button"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical|right"
            android:background="@drawable/button_connect"
            android:text="@string/conn_btn_connect"
            android:textSize="14sp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
